--- a/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/fragment_current_mission.xml
+++ b/WarsawCityGame/WarsawCityGames.App/src/main/res/layout/fragment_current_mission.xml
@@ -26,8 +26,9 @@
             android:textSize="30sp" />
     </LinearLayout>
     <ImageView
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="200dp"
         android:id="@+id/imageView2"/>
     <TextView
         android:layout_width="match_parent"
@@ -50,6 +51,16 @@
         android:fontFamily="sans-serif-thin"
         android:text=""
         android:id="@+id/missionDesc"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="18sp"
+        android:textAlignment="center"
+        android:layout_marginTop="20dp"
+        android:textColor="#FFFF0000"
+        android:fontFamily="sans-serif-thin"
+        android:text=""
+        android:id="@+id/missionExp"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
